--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,72 +1,30 @@
-<html >
+<!doctype html>
 <body>
 
-<link rel="stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<div class="collapse navbar-collapse">
+	  	<ul class="nav navbar-nav">
+	  		<li class="active">
+	  			<a href="features/Accueil.html">
+	  			<span tooltip="Vers la page d'accueil" tooltip-placement="bottom">Accueil</span>
+	  			</a>
+	  		</li>
+		</ul>
+	 </div> 
 
-<h3> Formulaire d'ajout d'un client </h3> 
+<!-- Bibliothèque des fichiers  ------------------------------------------------------>
 
-<br><br>
+<!-- Bootstrap core JavaScript : les fichiers CSS pour Bootstrap ;================================================== -->
+<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css">
 
-<form class="form-horizontal">
-<div ng-app="formExample">
-<div ng-controller="ExampleController">
+<!-- fichier JavaScript des module angularjs et angular-route.js,================================================== -->
+<script src="js/libs/angular.js"></script>
+<script src="js/libs/angular.min.js"></script>
+<script src="js/libs/angular-route.js"></script>
 
-  <ng-form novalidate class="simple-form">
-  
-  <div class="form-group">
-  
-  <label class="col-sm-2 control-label">Id</label>
-  <input type="text" ng-model="user.login" /><br /> <br>
-  
-  <label class="col-sm-2 control-label">Nom</label>
-  <input type="text" ng-model="user.nom" /><br /> <br>
-  
-   <label class="col-sm-2 control-label">Prenom</label>
-   <input type="text" ng-model="user.prenom" /><br /> <br>
-   
-    <label class="col-sm-2 control-label">Adresse</label>
-    <input type="text" ng-model="user.adresse" /><br /> <br>
-    
-     <label class="col-sm-2 control-label">E-mail</label>
-     <input type="email" ng-model="user.mail" /><br /> <br> 
-    
-  <div class="col-sm-10">
-  
-  <label class="col-sm-2 control-label"></label>
-  <button class="btn btn-success" ng-click="saveClient(user)">
-  <span class="glyphicon glyphicon-save"></span> Ajouter
-  </button>
-  
-   <input type="button" ng-click="asyncLoadClients()" value="Load Clients" value="set background" />
-</ng-form></form><br><br><br><br>
+<!-- angular js : les fichiers JS des composants Bootstrap -->
+<!-- les composants Bootstrap sont propulsés par JQuery -->
+<script src="js/libs/jquery-1.11.2.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
 
-<h3>La liste des clients</h3><br>
-<br>
-<table class="table table-striped">
-<thead> 
-<tr>
-    <th>Login</th>
-    <th>Nom</th>
-    <th>Prenom</th>
-    <th>Adresse</th>
-    <th>Email</th>
-</tr>
-</thead>
-<tbody>
-<tr ng-repeat="e in contacts">
-    <td>{{ e.login }}</td>
-    <td>{{ e.nom }}</td>
-    <td>{{ e.prenom }}</td>
-    <td>{{ e.adresse }}</td>
-    <td>{{ e.mail }}</td>
- </tr>
-</tbody>
-</table>   
-</div>
-</div>
-
-
-<script src="angular.min.js"></script>
-<script src="app.js"></script>
 </body>
-</html>
