--- a/src/main/webapp/features/compte.html
+++ b/src/main/webapp/features/compte.html
@@ -8,9 +8,10 @@
 
 <!-- Affichage tous les comptes -------------------------------------------------------->
 
-<!-- <h2> Ajouter un client dans la base de donnees</h2>
+<div ng-controller="ControllerComptes">
+<!-- 
+<h2> Ajouter un compte courant dans la base de donnees</h2>
 <br>
-	<div ng-controller="ExampleController2">
 		<form class="form-horizontal">
 			  <ng-form novalidate class="simple-form">
   
@@ -40,13 +41,11 @@
 		  
 		   				
 				</ng-form>
-		</form>
+		</form> -->
 		
 		<br>
 		<br>
-		<br> -->
-		
-<div ng-controller="ControllerAllComptes">
+		<br>
 		
 	<h2>La liste des Courant</h2>
 		<br>
